--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -53,3 +53,6 @@ jobs:
     - name: Build
       run: go build -v main.go
       
+  docker:
+    needs: build
+    uses: ./.github/workflows/Docker.yml
