--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -15,3 +15,12 @@ jobs:
 
     - name: Set up Docker Build
       uses: docker/bake-action@v2.3.0
+      
+    - name: Docker Login
+      # You may pin to the exact commit or the version.
+      # uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+      uses: docker/login-action@v2.1.0
+      with:
+        username: joseaurivan
+        password: ${{ secrets.PASSWORD_DOCKER_HUB }}
+        logout: true
