--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -24,3 +24,14 @@ jobs:
         username: joseaurivan
         password: ${{ secrets.PASSWORD_DOCKER_HUB }}
         logout: true
+        
+    - name: Build and push Docker images
+  # You may pin to the exact commit or the version.
+  # uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+      uses: docker/build-push-action@v4.0.0
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: joseaurivan/go_ci:${{github.ref_name}}
+
