--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -25,6 +25,11 @@ jobs:
         password: ${{ secrets.PASSWORD_DOCKER_HUB }}
         logout: true
         
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v2.1.1
+      with:
+        name: programa
+        
     - name: Build and push Docker images
   # You may pin to the exact commit or the version.
   # uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
